kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: potato-disease-ml
  labels:
    name: potato-disease-ml
    app: mlops-pipeline
